Port hotvect v10.13.5 (squashed)